# ExaEpi

./: .gitignore  .readthedocs.yml  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: clang.yml  cuda.yml  gcc.yml  hip.yml
Regression/: ExaEpi-GPU-tests.ini  ExaEpi-tests.ini
UrbanPop-scripts/: extract_urbanpop_feather.py
cmake/: SetupAgent.cmake  SetupAgent.cmake~
data/CA_2020_Census_Tracts/: tl_2020_06_tract.dbf
data/CaseData/: July4.cases  small.cases
data/San_Francisco_Bay_Region_2020_Census_Tracts/: region_2020_censustract.dbf
docs/: Doxyfile  Makefile  README.md
docs/doxygen/: main.dox
docs/source/: conf.py  index.rst
etc/: BayArea.csv  BayArea.ipynb  California.ipynb  California_Counties.ipynb  Visualization.ipynb  lassen_environment.sh  perlmutter_environment.sh  plot.py  plot_infected.ipynb  plot_initial_distribution.ipynb  plot_time_series.py  write_csv.py
examples/: inputs  inputs.bay  inputs.ca  inputs.census  inputs.demo  inputs.ma  inputs.small_cases  inputs_klevels.census  inputs_random_ca  perlmutter_script.sh
src/: AgentContainer.H  AgentContainer.cpp  AgentDefinitions.H  AirTravelFlow.H  AirTravelFlow.cpp  CMakeLists.txt  CMakeLists.txt~  CaseData.H  CaseData.cpp  CensusData.H  CensusData.cpp  DemographicData.H  DemographicData.cpp  DiseaseCoupling.H  DiseaseParm.H  DiseaseParm.cpp  DiseaseStatus.H  HospitalModel.H  IO.H  IO.cpp  Initialization.H  Initialization.cpp  InitializeInfections.H  InitializeInfections.cpp  InteractionLocGeneric.H  InteractionLocHome.H  InteractionLocNborhood.H  InteractionLocSchool.H  InteractionLocWork.H  InteractionLocations.H  InteractionModAirTravel.H  InteractionModGeneric.H  InteractionModHome.H  InteractionModHomeNborhood.H  InteractionModNborhood.H  InteractionModRandom.H  InteractionModSchool.H  InteractionModWork.H  InteractionModWorkNborhood.H  InteractionModel.H  (+8 more)
src/klevel/: AgentContainerWrapper.H  AgentContainerWrapper.cpp  CMakeLists.txt  main_klev.cpp  moveData.H
utilities/: hdf5_process.py  travel_model_scripts.py
utilities/hdf5_conversion/: convert_hdf5.py  convert_hdf5.sh
utilities/mps/: exaEPI_mps.sh
(+401 files in other folders)
